change to last stable gradle.build version - 1.1.3