@@ -1,38 +1,86 @@
 buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:1.2.0-beta1'
-  }
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.1.3'
+        classpath 'org.robolectric:robolectric-gradle-plugin:1.0.1'
+    }
 }
 
 repositories {
-  mavenCentral()
-  jcenter()
+    mavenCentral()
+    jcenter()
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'org.robolectric'
+
+robolectric {
+    // Configure includes / excludes
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
+
+    // Configure max heap size of the test JVM
+    maxHeapSize = '2048m'
+
+    // Configure the test JVM arguments - Does not apply to Java 8
+    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
+
+    // Specify max number of processes (default is 1)
+    maxParallelForks = 4
+
+    // Specify max number of test classes to execute in a test process
+    // before restarting the process (default is unlimited)
+    forkEvery = 150
+
+    // configure whether failing tests should fail the build
+    ignoreFailures true
+
+    // use afterTest to listen to the test execution results
+    afterTest { descriptor, result ->
+        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
+    }
+}
 
 android {
-  compileSdkVersion 22
-  buildToolsVersion "22.0.0"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.0"
 
-  defaultConfig {
-    applicationId "org.unittestsample"
-    minSdkVersion 18
-    targetSdkVersion 22
-    versionCode 1
-    versionName "1.0"
-  }
+    defaultConfig {
+        applicationId "org.unittestsample"
+        minSdkVersion 18
+        targetSdkVersion 22
+        versionCode 1
+        versionName "1.0"
+    }
 }
 
 dependencies {
-  compile 'com.squareup.retrofit:retrofit:1.9.0'
-  compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 
-  testCompile 'junit:junit:4.12'
-  testCompile 'org.robolectric:robolectric:2.4'
-  testCompile 'com.squareup.assertj:assertj-android:1.0.0'
-  testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'junit:junit:4.12'
+    compile ( 'com.squareup.assertj:assertj-android:1.0.0' ) //TODO: change this to testCompile after build:gradle:1.2.+
+    testCompile 'org.mockito:mockito-all:1.9.5'
+
+    testCompile('org.robolectric:robolectric:2.4') {
+        exclude module: 'classworlds'
+        exclude module: 'commons-logging'
+        exclude module: 'httpclient'
+        exclude module: 'maven-artifact'
+        exclude module: 'maven-artifact-manager'
+        exclude module: 'maven-error-diagnostics'
+        exclude module: 'maven-model'
+        exclude module: 'maven-project'
+        exclude module: 'maven-settings'
+        exclude module: 'plexus-container-default'
+        exclude module: 'plexus-interpolation'
+        exclude module: 'plexus-utils'
+        exclude module: 'wagon-file'
+        exclude module: 'wagon-http-lightweight'
+        exclude module: 'wagon-provider-api'
+    }
 }
+
+
